--- a/day09/homework/index.html
+++ b/day09/homework/index.html
@@ -9,9 +9,10 @@
         <h1><center>Home <br>Bank Description<hr></center></h1>
         <!-- ვამატებთ ლოგოს  -->
         <center><img src="image.png"></center>
-        <center><img src="image copy 3.png"></center>
+        <img src="image copy 4.png"> 
+        <img src="image copy 3.png">
         <!-- ვიყენებთ br,hr და h2 თეგებს და მივესალმებით საიტის მომხმარებლებს. -->
-        <center><h2>კეთილი იყოს თქვენი მობრძანება <br> gegechkori bank-ში ფინანსური ზრდისა და უსაფრთხოებისთვის <br>უშუალოდ ჩვენი საბანკო სერვისებიდან შექმნილია იმისთვის, რომ მოგაწოდოთ კომფორტი და მოქნილობა, რომელიც გჭირდებათ თქვენი ფინანსების ეფექტურად მართვისთვის.<hr></p></center></h2>
+        <center><h2>კეთილი იყოს თქვენი მობრძანება <br> gegechkori bank-ში ფინანსური ზრდისა და უსაფრთხოებისთვის <br>უშუალოდ ჩვენი საბანკო სერვისებიდან შექმნილია იმისთვის, რომ მოგაწოდოთ კომფორტი და მოქნილობა, რომელიც გჭირდებათ თქვენი ფინანსების ეფექტურად მართვისთვის.<hr></p></h2></center>
         <!-- ვიყენებთ br, hr და h3 თეგებს. -->
         <center><h3>ძირითადი <br> მახასიათებლები <hr> </center></h3>
         <!-- ვიყენებთ b, br, hr და h4 თეგს. -->
@@ -24,5 +25,11 @@
         <center><h2>4:ბიუჯეტის ინსტრუმენტები</h2><hr><b>გამოიყენეთ ჩვენი ბიუჯეტირებისა და ფინანსური დაგეგმვის ინსტრუმენტები, რათა დაგეხმაროთ თქვენი ფულის უფრო ეფექტურად მართვაში და თქვენი ფინანსური მიზნების მიღწევაში.</b> </center>
         <!-- ვიყენებთ h2, hr, b თეგებს. -->
         <center><h2>5:საზოგადოებაზე ორიენტირებული</h2><hr><b>ჩვენ გვჯერა საზოგადოების. ჩვენი მოგების ნაწილი მხარს უჭერს ადგილობრივ ინიციატივებსა და ქველმოქმედებას</b></center>
+        <ul>
+            <li><a href="index5.html">contact us</a></li>
+            <li><a href="index4.html">bank Review</a></li>
+            <li><a href="index3.html">products</a></li>
+            <li><a href="index2.html">about us</a></li>
+        </ul>
     </body>
 </html>
