--- a/day15/homework/index4.html
+++ b/day15/homework/index4.html
@@ -23,7 +23,7 @@
             <input type="email" placeholder="emai here" id="email">
             <br><br>
             <!-- passowrd -->
-            <label for="passowrd">email</label>
+            <label for="passowrd">password</label>
             <input type="password" placeholder="passowrd here" id="passowrd">
             <br><br>
             <!-- date of birth -->
