--- a/day15/homework/index4.html
+++ b/day15/homework/index4.html
@@ -20,7 +20,7 @@
             <br><br>
             <!-- Email -->
             <label for="email">email</label>
-            <input type="email" placeholder="emai here" id="email">
+            <input type="email" placeholder="Email here" id="email">
             <br><br>
             <!-- passowrd -->
             <label for="passowrd">password</label>
