--- a/day15/homework/index3.html
+++ b/day15/homework/index3.html
@@ -13,7 +13,7 @@
             <input type="text" placeholder="last name" id="last name" value="last name here"/>
             <br><br>
             <!-- email -->
-            <label for="last name">email</label>
+            <label for="email">email</label>
             <input type="email" placeholder="email" id="email" value="email here"/>
             <br><br>
             <!-- text -->
