--- a/day19/classwork/index2.html
+++ b/day19/classwork/index2.html
@@ -1,8 +1,6 @@
 <html>
     <head>
-        <title>
-            Application form
-        </title>
+        <title>Application form</title>
     </head>
 
     <body>
