--- a/day23/homework/index5.html
+++ b/day23/homework/index5.html
@@ -1,1 +1,20 @@
-კომენტარების დახმარებით, აღწერეთ რას აკეთებს colspan და rowspan
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <table border="1">
+        <tr>
+        <td colspan="3">ეს უჯრა 3 სვეტშია გადაჭიმული</td>
+        </tr>
+        <tr>
+        <td>პირველი სვეტი</td>
+        <td>მეორე სვეტი</td>
+        <td>მესამე სვეტი</td>
+        </tr>
+    </table>
+</body>
+</html>
