--- a/day23/homework/index2.html
+++ b/day23/homework/index2.html
@@ -14,7 +14,7 @@
         </tr>
         <tr>
             <td>HTML</td>
-            <td>HTML არის სტანდარტული მარკაპ ენა, რომელიც გამოიყენება ვებ-გვერდების სტრუქტურის შესაქმნელად.</td>
+            <td>HTML არის პროგრამირების ენა რომელიც გამოიყენება ვებ-გვერდების სტრუქტურის შესაქმნელად.</td>
         </tr>
         <tr>
             <td>CSS</td>
